[package]
name = "gptee"
version = "0.3.7"
edition = "2021"
rust-version = "1.67"
authors = ["Roger Zurawicki <roger@zura.wiki>"]
categories = ["development-tools"]
keywords = ["openai", "ai", "gpt"]
description = "output from a language model using standard input as the prompt"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/zurawiki/gptee"
repository = "https://github.com/zurawiki/gptee"

[[bin]]
name = "gptee"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.71"
async-openai = "0.10.3"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.3.0", features = ["derive"] }
futures = "0.3.28"
tiktoken-rs = { version = "0.4.2", features = ["async-openai"]}
tokio = {version = "1.28.1", features = ["full"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
