[package]
name = "gptee"
version = "0.3.8"
edition = "2021"
rust-version = "1.67"
authors = ["Roger Zurawicki <roger@zura.wiki>"]
categories = ["development-tools"]
keywords = ["openai", "ai", "gpt"]
description = "output from a language model using standard input as the prompt"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/zurawiki/gptee"
repository = "https://github.com/zurawiki/gptee"

[[bin]]
name = "gptee"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.72"
async-openai = "0.12.1"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.3.19", features = ["derive"] }
futures = "0.3.28"
tiktoken-rs = { version = "0.5.0", features = ["async-openai"]}
tokio = {version = "1.31.0", features = ["full"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
