[package]
name = "gptee"
version = "0.3.10"
edition = "2021"
rust-version = "1.72"
authors = ["Roger Zurawicki <roger@zura.wiki>"]
categories = ["development-tools"]
keywords = ["openai", "ai", "gpt"]
description = "output from a language model using standard input as the prompt"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/zurawiki/gptee"
repository = "https://github.com/zurawiki/gptee"

[[bin]]
name = "gptee"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.75"
async-openai = "0.14.2"
backoff = { version = "0.4.0", features = ["tokio"] }
clap = { version = "4.4.3", features = ["derive"] }
futures = "0.3.28"
tiktoken-rs = { version = "0.5.4", features = ["async-openai"]}
tokio = {version = "1.32.0", features = ["full"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"]}
